Add Microsoft's VS Code project to the defect density analysis.

--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -312,6 +312,7 @@
   \href{https://github.com/tensorflow/tensorflow}{tensorflow} & C++ & 3,600 & 40,200 & 11.2 & Feb-25 \\
   \href{https://github.com/flutter/flutter}{flutter} & Dart & 2,100 & 103,000 & 49.0 & Feb-25 \\
   \href{https://github.com/rust-lang/rust}{rust} & Rust & 2,100 & 56,500 & 26.9 & Feb-25 \\
+  \href{https://github.com/microsoft/vscode}{vscode} & TypeScript & 1,500 & 210,000 & 140.0 & Sep-25 \\
   \href{https://github.com/apache/spark}{spark} & Java & 1,400 & 53,750 & 38.4 & Sep-25 \\
   \href{https://github.com/apache/kafka}{kafka} & Java & 980 & 19,800 & 20.2 & Sep-25 \\
   \href{https://github.com/angular/angular}{angular} & TypeScript & 800 & 28,700 & 35.9 & Feb-25 \\
