--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -309,6 +309,7 @@
   \toprule
   Project & Stack & KLoC & Issues & I/KLoC & When \\
   \midrule
+  \href{https://github.com/torvalds/kernel}{kernel} & C & 27,300 & 220,600 & 8.1 & Sep-25 \\
   \href{https://github.com/tensorflow/tensorflow}{tensorflow} & C++ & 3,600 & 40,200 & 11.2 & Feb-25 \\
   \href{https://github.com/flutter/flutter}{flutter} & Dart & 2,100 & 103,000 & 49.0 & Feb-25 \\
   \href{https://github.com/rust-lang/rust}{rust} & Rust & 2,100 & 56,500 & 26.9 & Feb-25 \\
