Refactor: Use curly braces for enquote.

--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -98,7 +98,7 @@
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{size-vs-testing.png}
   \par\columnbreak\par
-  ``We conclude that code size is not a good predictor of testing effort (measured by allocated test engineers) at either product or product line levels. Other metrics, like code coupling and cohesion are more appropriate for such estimation.''\par
+  \enquote{We conclude that code size is not a good predictor of testing effort (measured by allocated test engineers) at either product or product line levels. Other metrics, like code coupling and cohesion are more appropriate for such estimation.}\par
   \lnSource{ajila2007experimental}
   \end{multicols}}
 
